# datarobot-genai

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml  setup.py
.cursor/: BUGBOT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.mkfiles/: dev.mk  licenses.mk  lint.mk  release.mk  tests.mk
.taskfiles/: cve-sync.yml  dev.yml  drmcp.yml  env.yml  license.yml  lint.yml  packaging.yml  tests.yml
config/: mongo_indexes.json
docs/: README.md  elicitation.md  example.ipynb  fallback.md  gen_ref_pages.py  llm.md  memory-architecture-diagrams.md  memory-team-onboarding.md  properdocs.yml  pyproject.toml
docs/application_utils/: README.md
docs/crewai/: AGENTS.md  README.md  agent.md  agent_example.py  caveats.md  llm.md  mcp.md
docs/design/: nat-1.6-streaming.md
docs/dragent/: README.md  tracing.md
docs/drtools/: README.md  auth-atlassian.md  auth.md
docs/langgraph/: AGENTS.md  README.md  agent.md  agent_example.py  hitl.md  llm.md  prompt.md
docs/llamaindex/: AGENTS.md  README.md  agent.md  agent_example.py  llm.md  prompt.md
docs/nat/: README.md  a2a-auth.md  a2a-client.md  agent.md  caveats.md  llm.md  mcp.md  memory.md
docs/src/: index.md  llm.md
docs/src/application_utils/: README.md  chat_history.md  memory_orm.md
docs/src/crewai/: prompt.md
docs/src/design/: multi-cluster-cache-resilience.md
docs/src/dragent/: README.md  tracing.md
docs/src/drtools/: auth.md
docs/src/langgraph/: README.md  mcp.md
docs/src/llamaindex/: mcp.md
docs/src/nat/: README.md  a2a-auth.md  a2a-client.md  eval.md  llm.md  mcp.md  memory.md
docs/src/stylesheets/: extra.css
docs/superpowers/specs/: 2026-04-14-chat-response-chunk-stream-wrapper-design.md
e2e-tests/: .env.sample  README.md  Taskfile.yaml  llmgw_matrix.yaml  pyproject.toml  smoke_matrix.yaml
e2e-tests/cases/: llms-llmgw.yaml  llms-nim.yaml  llms-others.yaml  llms.yaml  memory.yaml  moderations.yaml  pr-tests.yaml
e2e-tests/custom_metric_app/: app.py
e2e-tests/dragent/: Taskfile.yaml  common.py  moderation_config.yaml  run_agent.py  tool.py
e2e-tests/dragent/base/: myagent.py  register.py  workflow-ootb-moderations.yaml  workflow-tracing.yaml  workflow.yaml
e2e-tests/dragent/base/nemo_guardrails/prompt/: actions.py  config.yml
e2e-tests/dragent/base/nemo_guardrails/response/: actions.py  rails.co
e2e-tests/dragent/crewai/: Taskfile.yaml  myagent.py  register.py  workflow-custom-moderations.yaml  workflow-external-llm.yaml  workflow-memory.yaml  workflow-nemo-evaluator-moderations.yaml  workflow-nemo-guardrails-moderations.yaml  workflow-ootb-custom-moderations.yaml  workflow-reasoning-opus.yaml  workflow-reasoning.yaml  workflow-router-fallback-used.yaml  workflow.yaml  workflow_with_mcp.yaml
e2e-tests/dragent/crewai/nemo_guardrails/prompt/: actions.py
e2e-tests/dragent/crewai/nemo_guardrails/response/: actions.py  config.yml
e2e-tests/dragent/langgraph/: Taskfile.yaml  __init__.py  myagent.py  register.py  workflow-memory.yaml  workflow-ootb-moderations.yaml  workflow-reasoning-opus.yaml  workflow-reasoning.yaml  workflow-router-fallback-used.yaml  workflow.yaml  workflow_with_mcp.yaml
e2e-tests/dragent/langgraph/nemo_guardrails/prompt/: rails.co
e2e-tests/dragent/langgraph_hitl/: myagent.py  register.py  workflow.yaml
e2e-tests/dragent/llamaindex/: Taskfile.yaml  myagent.py  register.py  workflow-memory.yaml  workflow-ootb-moderations.yaml  workflow-reasoning-gemini.yaml  workflow-reasoning-openai.yaml  workflow-reasoning-opus.yaml  workflow-reasoning-sonnet.yaml  workflow-router-fallback-used.yaml  workflow.yaml  workflow_with_mcp.yaml
e2e-tests/dragent/llamaindex/nemo_guardrails/: blocked_terms.txt
e2e-tests/dragent/llamaindex/nemo_guardrails/prompt/: actions.py
e2e-tests/dragent/llamaindex/nemo_guardrails/response/: prompts.yml
e2e-tests/dragent/nat/: dataset.json  dataset_negative.json  eval_workflow.yml  moderation.yaml  moderations_evaluator.py  register.py  workflow-a2a.yaml  workflow-memory.yaml  workflow-nemo-evaluator-moderations.yaml  workflow-ootb-moderations.yaml  workflow-router-fallback-used.yaml  workflow-router-with-fallback.yaml  workflow.yaml  workflow_with_mcp.yaml
e2e-tests/dragent/nat/eval/: dataset-agent-goal-accuracy.json  dataset-agent-guideline-adherence.json  dataset-faithfulness.json  dataset-task-adherence.json  eval-config-agent-goal-accuracy.yaml  eval-config-agent-guideline-adherence.yaml  eval-config-base.yaml  eval-config-faithfulness.yaml  eval-config-task-adherence.yaml  eval-config.yaml
e2e-tests/dragent/nat/nemo_guardrails/prompt/: prompts.yml
e2e-tests/dragent/overrides/: workflow-custom-model-moderations.yaml  workflow-memory.yaml  workflow-nemo-guardrails-moderations.yaml  workflow-ootb-custom-moderations.yaml  workflow-ootb-moderations.yaml  workflow-reasoning-gemini.yaml  workflow-reasoning-openai.yaml  workflow-reasoning-sonnet.yaml
e2e-tests/dragent/router/: workflow-fallback-used.yaml  workflow-primary-only.yaml  workflow-with-fallback.yaml
e2e-tests/dragent_tests/: _run_agent_inline.py  conftest.py  helpers.py  mock_otel_collector.py  otel_helpers.py  test_a2a.py  test_chat_completions.py  test_cli_run.py  test_dragent_streaming.py  test_dragent_tools.py  test_health.py  test_history_multiturn.py  test_interrupt_resume.py  test_mcp.py  test_memory.py  test_moderation_block.py  test_nat_eval.py  test_otel_metrics.py  test_otel_tracing.py  test_reasoning.py  test_router.py  test_run_agent_inline.py  test_single_response.py  test_streaming.py  test_tools.py
e2e-tests/examples/: quickstart.ipynb
e2e-tests/langgraph_agent/: Taskfile.yaml  __init__.py  adaptors.py  register.py
e2e-tests/scripts/: cases.py  memory_space.py  run_local.py
e2e-tests/smoke_tests/: test_smoke_crewai.py  test_smoke_langgraph.py  test_smoke_llamaindex.py
e2e-tests/tests/: conftest.py  test_dragent_mcp.py  test_dragent_streaming.py  test_dragent_tools.py
sbin/: drmcp-migrate-db
tests/: conftest.py  (+1 more)
(+1182 files in other folders)
