[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datarobot-genai"
version = "0.24.2"
description = "Generic helpers for GenAI"
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "DataRobot, Inc." }]
dynamic = ["optional-dependencies"]

# Optional dependencies (extras) are defined in setup.py

[project.urls]
Homepage = "https://github.com/datarobot-oss/datarobot-genai"

[project.entry-points.'nat.plugins']
authenticated_a2a_client = "datarobot_genai.dragent.plugins.auth_a2a_client"
okta_cross_app_access = "datarobot_genai.dragent.plugins.okta_a2a_auth"
per_user_tool_calling_agent = "datarobot_genai.dragent.plugins.per_user_tool_calling_agent"
streaming_memory_agent = "datarobot_genai.dragent.plugins.streaming_memory_agent"
datarobot_otel_conventions_middleware = "datarobot_genai.dragent.plugins.datarobot_otel_conventions_middleware"
datarobot_mcp_client = "datarobot_genai.nat.datarobot_mcp_client"
datarobot_auth_provider = "datarobot_genai.nat.datarobot_auth_provider"
datarobot_moderation_middleware = "datarobot_genai.dragent.plugins.datarobot_moderation_middleware"
datarobot_dragent_normalization = "datarobot_genai.dragent.plugins.datarobot_dragent_normalization"
datarobot_otelcollector = "datarobot_genai.dragent.plugins.datarobot_otelcollector"
datarobot_mem0_memory = "datarobot_genai.dragent.plugins.datarobot_mem0_memory"
llm_providers = "datarobot_genai.dragent.plugins.llm_providers"
llm_clients = "datarobot_genai.dragent.plugins.llm_clients"
crewai_llm_clients = "datarobot_genai.crewai.llm_clients"
llamaindex_llm_clients = "datarobot_genai.llama_index.llm_clients"

[project.entry-points.'nat.front_ends']
dragent = "datarobot_genai.dragent.frontends.register"

[project.entry-points.'nat.cli']
dragent = "datarobot_genai.dragent.cli.commands:dragent_command"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datarobot_genai = [
    "py.typed",
    "drmcp/core/dynamic_tools/deployment/schemas/*.json",
    "drmcpbase/dynamic_tools/deployment/schemas/*.json",
]

[tool.uv]
package = true

# cve-sync:begin
constraint-dependencies = [
    "pip>=26.1.2",
    "pdfminer.six>=20251230",
    "aiohttp>=3.14.1",
    "openai>=2.30.0",
    "langchain>=1.3.9",
    "langsmith>=0.8.18",
    "nltk>=3.9.4",
    "langgraph-checkpoint>=4.1.1",
    "starlette>=1.3.1",
    "python-multipart>=0.0.31",
    "joserfc>=1.6.8",
    "soupsieve>=2.8.4",
    "pypdf>=6.13.3",
    "pyarrow>=23.0.1",
]
override-dependencies = [
    "crewai>=1.11.0",
    "cryptography>=48.0.1",
    "PyJWT>=2.13.0",
    "litellm>=1.91.1",
    "ragas>=0.4.3",
    "python-dotenv>=1.2.2",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "opentelemetry-exporter-otlp-proto-common>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "opentelemetry-instrumentation>=0.64b0",
]
exclude-dependencies = [
    "annoy",
    "build",
    "datarobot-early-access",
    "diskcache",
    "fastembed",
    "flask",
    "gevent",
    "kubernetes",
    "lancedb",
    "langchain-milvus",
    "leptonai",
    "llama-index-cli",
    "onnxruntime",
    "openpyxl",
    "pyfiglet",
    "pymilvus",
    "python-docx",
    "pytube",
    "scikit-network",
    "shellingham",
    "stagehand",
    "typer",
    "uv",
    "watchdog",
    "wheel",
    "youtube-transcript-api",
]
# cve-sync:end

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "twine>=5.0.0",
  "pytest-asyncio>=0.23.5",
  "responses>=0.25.8",
  "ipdb>=0.13.13",
  "aioresponses>=0.7.8",
  "respx>=0.22.0",
  # drtools top-level imports needed by TestTaxonomyCompleteness (_walk imports all drtools modules)
  "beautifulsoup4>=4.12.0",
  "pypdf>=6.10.1",
  "polars>=1.0.0",
  "tavily-python>=0.7.20",
  "perplexityai>=0.27",
  "datarobot-predict>=1.13.2",
]

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
pretty = true
show_absolute_path = true

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # Pyflakes
    "F",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "PL", # pylint
    "UP", # pyupgrade
    "INP", # check missing __init__.py
    "B006", # mutable-argument-default
]
extend-ignore = [
    # D100-D106: Ignore undocumented module, class, method, function & inner class
    "D100", "D101", "D102", "D103", "D104", "D105", "D106",
    # 1 blank line required between summary line and description
    "D205",
    # Too many arguments
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Too many branches
    "PLR0912",
]
fixable = [
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "F401", # Imported but unused
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # Missing docstring in public package
    "F401"  # Imported but unused
]
"scripts/*.py" = [
    "INP001", # implicit-namespace-package: allow scripts without package semantics
    "E402",   # module-import-not-at-top-of-file: allow local imports in smoke script
    "I001",   # isort import order within functions
    "PLC0415",# pylint import-outside-toplevel for controlled local imports
]
"src/datarobot_genai/**/*.py" = [
    "PLC0415",# pylint import-outside-toplevel: allow lazy imports for memory optimization
]
"docs/**/*.py" = [
    "INP001", # implicit-namespace-package: standalone example scripts
]
"tests/**/*.py" = [
    "PLC0415",# pylint import-outside-toplevel: allow imports in test functions
    "PLR2004",# magic-value-comparison: allow magic values in test assertions
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 8

[tool.pytest.ini_options]
filterwarnings = []
asyncio_mode = "auto"
markers = [
    "integration: marks tests that run against a live external service (deselected by default)",
]

[tool.coverage.run]
source = ["datarobot_genai"]
omit = [
    "*/__init__.py",
    "*/test_utils/*",
]

# Custom import restrictions (enforced by scripts/check_imports.py)
[subpackages.import-restrictions]
drtools_allowed_subpackages = ["drtools", "drmcputils"]
drtools_forbidden = [
    "fastmcp",
    "datarobot_genai.drmcpbase",
]
drmcp_allowed_subpackages = ["drtools", "drmcp", "drmcpbase", "drmcputils"]
drmcpbase_allowed_subpackages = ["drmcpbase", "drmcputils"]
drmcpbase_forbidden = [
    "datarobot_genai.drtools",
    "datarobot_genai.drmcp",
    "datarobot_genai.core",
]
drmcputils_allowed_subpackages = ["drmcputils"]
# core is reachable only via the datarobot_genai.core.utils.auth carve-out in
# check_imports.py (shared OAuth primitives that auth.py needs); everything else
# under core, plus all sibling packages, is blocked by the allowed-subpackages check.
drmcputils_forbidden = [
    "fastmcp",
]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
]
fail_under = 80
