[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datarobot-genai"
version = "0.24.3"
description = "Generic helpers for GenAI"
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "DataRobot, Inc." }]
dynamic = ["optional-dependencies"]

# Optional dependencies (extras) are defined in setup.py

[project.urls]
Homepage = "https://github.com/datarobot-oss/datarobot-genai"

[project.scripts]
# Prints the canonical [tool.uv] override/exclude/constraint block that consumers
# must copy into their own workspace-root pyproject.toml (these settings do not
# propagate through package metadata). See the README best-practices section.
datarobot-genai-uv-config = "datarobot_genai._packaging.cli:main"

[project.entry-points.'nat.plugins']
authenticated_a2a_client = "datarobot_genai.dragent.plugins.auth_a2a_client"
okta_cross_app_access = "datarobot_genai.dragent.plugins.okta_a2a_auth"
per_user_tool_calling_agent = "datarobot_genai.dragent.plugins.per_user_tool_calling_agent"
streaming_memory_agent = "datarobot_genai.dragent.plugins.streaming_memory_agent"
datarobot_otel_conventions_middleware = "datarobot_genai.dragent.plugins.datarobot_otel_conventions_middleware"
datarobot_mcp_client = "datarobot_genai.nat.datarobot_mcp_client"
datarobot_auth_provider = "datarobot_genai.nat.datarobot_auth_provider"
datarobot_moderation_middleware = "datarobot_genai.dragent.plugins.datarobot_moderation_middleware"
datarobot_dragent_normalization = "datarobot_genai.dragent.plugins.datarobot_dragent_normalization"
datarobot_otelcollector = "datarobot_genai.dragent.plugins.datarobot_otelcollector"
datarobot_mem0_memory = "datarobot_genai.dragent.plugins.datarobot_mem0_memory"
llm_providers = "datarobot_genai.dragent.plugins.llm_providers"
llm_clients = "datarobot_genai.dragent.plugins.llm_clients"
crewai_llm_clients = "datarobot_genai.crewai.llm_clients"
llamaindex_llm_clients = "datarobot_genai.llama_index.llm_clients"

[project.entry-points.'nat.front_ends']
dragent = "datarobot_genai.dragent.frontends.register"

[project.entry-points.'nat.cli']
dragent = "datarobot_genai.dragent.cli.commands:dragent_command"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datarobot_genai = [
    "py.typed",
    "drmcp/core/dynamic_tools/deployment/schemas/*.json",
    "drmcpbase/dynamic_tools/deployment/schemas/*.json",
    "_packaging/*.toml",
]

[tool.uv]
package = true
# NOTE: uv reads override-dependencies / exclude-dependencies / constraint-dependencies
# ONLY from the workspace-root pyproject.toml. They are never published in package
# metadata and never propagate to downstream consumers. The canonical copy that
# consumers must paste into their own workspace root is shipped in the wheel at
# datarobot_genai/_packaging/uv_consumer_config.toml (print it with the
# `datarobot-genai-uv-config` command). THIS BLOCK IS THE SOURCE OF TRUTH: that
# file is GENERATED from the three lists below by scripts/gen_consumer_config.py.
# After editing them, run `task sync-consumer-config` and commit; Packaging CI
# fails if the shipped file drifts.
constraint-dependencies = [
    # Residual CVE floors that cannot be expressed as real dependency metadata:
    # `pip` is build/environment tooling (never a runtime Requires-Dist) and
    # `pdfminer.six` only ever arrives as a transitive-of-transitive (via pdfplumber).
    # Every other floor that used to live here is now a real dependency in setup.py,
    # so downstream consumers inherit it automatically.
    "pip>=26.1.2",
    "pdfminer.six>=20251230",
]
override-dependencies = [
    "crewai[litellm]>=1.11.0",
    # nvidia-nat-core hard-pins cryptography<47 and PyJWT<2.13 across all stable releases.
    # Overrides are required to force CVE-safe versions until NAT relaxes their upper bounds.
    "cryptography>=48.0.1",
    "PyJWT>=2.13.0",
    # nvidia-nat caps litellm below the version datarobot-genai needs.
    "litellm>=1.91.1,<2.0.0",
    "ragas>=0.4.3,<0.5.0",
    # crewai caps python-dotenv below the version we need.
    "python-dotenv>=1.2.2",
    # Align the whole OpenTelemetry stack at the latest release train (core 1.43.x /
    # instrumentation 0.64b0) so the traceloop instrumentors (crewai/langchain/llamaindex
    # 0.62.1) resolve. These overrides force the family to stay version-synchronized
    # regardless of the older upper bounds that crewai / drum / moderations declare.
    "opentelemetry-api>=1.43.0,<2.0.0",
    "opentelemetry-sdk>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-common>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0,<2.0.0",
    "opentelemetry-instrumentation>=0.64b0,<0.65",
]
exclude-dependencies = [
    # Unused / vulnerable transitive packages removed to shrink install + CVE surface.
    # genai's own source imports none of these (verified); genai's CLI uses click, not typer.
    "annoy",                    # optional vector index pulled in by crewai; build issues, not used
    "build",                    # Python build system pulled in by crewai; runtime unnecessary
    "datarobot-early-access",   # randomly overlaps the core `datarobot` package
    "diskcache",                # disk caching pulled in by ragas; not used
    "fastembed",                # embedding runtime pulled in by the crewai stack; not used
    "flask",                    # web framework pulled in by nvidia-nat 1.6.0; not used
    "gevent",                   # async runtime pulled in by the crewai stack; not used
    "kubernetes",               # K8s client pulled in by crewai-tools; not used
    "lancedb",                  # optional vector DB pulled in by crewai; not used
    "langchain-milvus",         # Milvus vector DB adapter pulled in by nvidia-nat-langchain; not used
    "leptonai",                 # Lepton AI backend pulled in by nemo-evaluator-launcher; pins httpx==0.27.2 which conflicts with the auth extra
    "llama-index-cli",          # CLI tool pulled in by llama-index; not needed at runtime
    "onnxruntime",              # ONNX runtime pulled in by the crewai stack; not used
    "openpyxl",                 # Excel parser pulled in by crewai-tools; not used
    "pyfiglet",                 # ASCII banner renderer for the deepeval CLI (moderations[all]); not used
    "pymilvus",                 # Milvus client pulled in by langchain-milvus; not used
    "python-docx",              # Word doc parser pulled in by crewai-tools; not used
    "pytube",                   # YouTube downloader pulled in by crewai-tools; not used
    "scikit-network",           # graph analysis pulled in by ragas; not used
    "shellingham",              # shell detection; sole dependent was typer
    "stagehand",                # Playwright web automation pulled in by crewai-tools; not used
    "typer",                    # CLI framework for the guardrails CLI (moderations[all]); genai's own CLI uses click
    "uv",                       # package manager bundled by crewai; runtime unnecessary
    "watchdog",                 # file watcher for guardrails hot-reload (moderations[all]); not used
    "wheel",                    # build-time packaging tool; not a runtime dependency
    "youtube-transcript-api",   # YouTube transcripts pulled in by crewai-tools; not used
]

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "twine>=5.0.0",
  "pytest-asyncio>=0.23.5",
  "responses>=0.25.8",
  "ipdb>=0.13.13",
  "aioresponses>=0.7.8",
  "respx>=0.22.0",
  # drtools top-level imports needed by TestTaxonomyCompleteness (_walk imports all drtools modules)
  "beautifulsoup4>=4.12.0",
  "pypdf>=6.10.1",
  "polars>=1.0.0",
  "tavily-python>=0.7.20",
  "perplexityai>=0.27",
  "datarobot-predict>=1.13.2",
]

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
pretty = true
show_absolute_path = true

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # Pyflakes
    "F",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "PL", # pylint
    "UP", # pyupgrade
    "INP", # check missing __init__.py
    "B006", # mutable-argument-default
]
extend-ignore = [
    # D100-D106: Ignore undocumented module, class, method, function & inner class
    "D100", "D101", "D102", "D103", "D104", "D105", "D106",
    # 1 blank line required between summary line and description
    "D205",
    # Too many arguments
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Too many branches
    "PLR0912",
]
fixable = [
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "F401", # Imported but unused
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # Missing docstring in public package
    "F401"  # Imported but unused
]
"scripts/*.py" = [
    "INP001", # implicit-namespace-package: allow scripts without package semantics
    "E402",   # module-import-not-at-top-of-file: allow local imports in smoke script
    "I001",   # isort import order within functions
    "PLC0415",# pylint import-outside-toplevel for controlled local imports
]
"src/datarobot_genai/**/*.py" = [
    "PLC0415",# pylint import-outside-toplevel: allow lazy imports for memory optimization
]
"docs/**/*.py" = [
    "INP001", # implicit-namespace-package: standalone example scripts
]
"tests/**/*.py" = [
    "PLC0415",# pylint import-outside-toplevel: allow imports in test functions
    "PLR2004",# magic-value-comparison: allow magic values in test assertions
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 8

[tool.pytest.ini_options]
filterwarnings = []
asyncio_mode = "auto"
markers = [
    "integration: marks tests that run against a live external service (deselected by default)",
]

[tool.coverage.run]
source = ["datarobot_genai"]
omit = [
    "*/__init__.py",
    "*/test_utils/*",
]

# Custom import restrictions (enforced by scripts/check_imports.py)
[subpackages.import-restrictions]
drtools_allowed_subpackages = ["drtools", "drmcputils"]
drtools_forbidden = [
    "fastmcp",
    "datarobot_genai.drmcpbase",
]
drmcp_allowed_subpackages = ["drtools", "drmcp", "drmcpbase", "drmcputils"]
drmcpbase_allowed_subpackages = ["drmcpbase", "drmcputils"]
drmcpbase_forbidden = [
    "datarobot_genai.drtools",
    "datarobot_genai.drmcp",
    "datarobot_genai.core",
]
drmcputils_allowed_subpackages = ["drmcputils"]
# core is reachable only via the datarobot_genai.core.utils.auth carve-out in
# check_imports.py (shared OAuth primitives that auth.py needs); everything else
# under core, plus all sibling packages, is blocked by the allowed-subpackages check.
drmcputils_forbidden = [
    "fastmcp",
]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
]
fail_under = 80
