[project]
name = "datarobot-genai-docs"
version = "0.1.0"
description = "Documentation for DataRobot GenAI Library"
requires-python = ">=3.11"
dependencies = [
    "properdocs>=1.6.7",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]
