[project]
name = "datarobot-genai-e2e-tests"
version = "0.1.0"
description = "E2E tests for datarobot-genai"
requires-python = ">=3.11, <3.14"
authors = [{ name = "DataRobot, Inc." }]

dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "pytest",
    "pytest-rerunfailures",
    "pytest-timeout",
    "python-dotenv",
    "ag-ui-protocol @ git+https://github.com/cavitcakir/ag-ui@feat/python-validate-sequence#egg=ag-ui&subdirectory=sdks/python",
]

[dependency-groups]
dragent-nat = [
    "datarobot-genai[dragent]"
]
dragent-langgraph = [
    "datarobot-genai[dragent,langgraph]"
]
dragent-crewai = [
    "datarobot-genai[dragent,crewai]",
]
dragent-llamaindex = [
    "datarobot-genai[dragent,llamaindex]"
]
dragent-base = [
    "datarobot-genai[dragent]",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]
dev = [
    "ipdb>=0.13.13",
]

[project.entry-points.'nat.plugins']
nat_agent = "dragent.nat.register"
langgraph_agent = "dragent.langgraph.register"
crewai_agent = "dragent.crewai.register"
llamaindex_agent = "dragent.llamaindex.register"
base_agent = "dragent.base.register"

[tool.uv]
package = true
override-dependencies = [
    "crewai[litellm]>=1.11.0",  # TODO: BUZZOK-30239
    "litellm>=1.83.0,<2.0.0",
]
exclude-dependencies = [
    "llama-index-llms-azure-openai",
    "llama-index-llms-bedrock",
    "llama-index-llms-nvidia",
    "llama-index-llms-openai",
]

[tool.uv.sources]
datarobot-genai = { path = "../", editable = true }

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
pretty = true
show_absolute_path = true

[tool.pytest.ini_options]
timeout = 300

[tool.ruff]
line-length = 100
indent-width = 4

[tool.setuptools]
packages = ["dragent", "drmcp"]

[tool.ruff.lint]
select = [
    "E",  # Pyflakes
    "F",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "PL", # pylint
    "UP", # pyupgrade
    "INP", # check missing __init__.py
    "B006", # mutable-argument-default
]
extend-ignore = [
    # D100-D106: Ignore undocumented module, class, method, function & inner class
    "D100", "D101", "D102", "D103", "D104", "D105", "D106",
    # 1 blank line required between summary line and description
    "D205",
    # Too many arguments
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Too many branches
    "PLR0912",
    # inline imports
    "PLC0415",
    # assigning a lambda
    "E731",
]
fixable = [
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "F401", # Imported but unused
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # Missing docstring in public package
    "F401"  # Imported but unused
]


[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 8
